# shupperhelpI

./: app.py  embed_code.html  index.html  models.py  optimized_index.html  pyproject.toml  replit.nix
static/css/: style.css
static/js/: script.js
templates/: api_key_form.html  error.html  index.html  index.html.backup
utils/: huggingface_api.py
